--- a/app/src/main/res/layout-land/fragment_auth.xml
+++ b/app/src/main/res/layout-land/fragment_auth.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.LandingActivity">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -93,12 +91,11 @@
             android:layout_height="@dimen/height_0dp"
             android:background="@drawable/shape_rounded_landing"
             android:elevation="@dimen/elevation_4dp"
-            app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="parent"
-            app:navGraph="@navigation/nav_graph_landing" />
+            app:navGraph="@navigation/nav_graph_auth" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
