--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,6 +33,7 @@
     <dimen name="height_48dp">48dp</dimen>
     <dimen name="height_52dp">52dp</dimen>
     <dimen name="height_86dp">86dp</dimen>
+    <dimen name="height_102dp">102dp</dimen>
     <dimen name="height_125dp">125dp</dimen>
     <dimen name="height_180dp">180dp</dimen>
     <dimen name="height_250dp">250dp</dimen>
@@ -86,6 +87,7 @@
     <dimen name="radius_12dp">12dp</dimen>
     <dimen name="radius_20dp">20dp</dimen>
     <dimen name="radius_40dp">40dp</dimen>
+    <dimen name="radius_64dp">64dp</dimen>
     <dimen name="radius_50percent">50%</dimen>
 
     <!--Miscellaneous-->
