--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -2,8 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/blue">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,7 +17,6 @@
             android:adjustViewBounds="true"
             android:alpha="0.90"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_landing_header"
             android:tintMode="multiply"
             app:layout_constraintBottom_toTopOf="@id/fcv"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +43,6 @@
                 android:layout_margin="@dimen/margin_2dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_flag_usa"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +59,6 @@
             android:layout_marginVertical="@dimen/margin_8dp"
             android:fontFamily="@font/localized_black"
             android:gravity="start|center_vertical"
-            android:text="@string/login_text_title"
             android:textAlignment="gravity"
             android:textColor="@color/whiteStatic"
             android:textSize="@dimen/text_size_34sp"
