--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- MARGIN_TOP: 12 + 32 = 44DP -->
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_description"
             android:layout_width="@dimen/width_0dp"
@@ -125,6 +126,8 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- MARGIN_TOP: 3 + 5 = 8DP -->
+        <!-- MARGIN_HORIZONTAL: 27 + 5 = 32DP -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_forgot_pw"
             style="@style/Theme.WarrantyRoster.TextButton"
@@ -142,6 +145,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ti_layout_password" />
 
+        <!-- MARGIN_TOP: 35 + 5 = 40DP -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_login"
             style="@style/Theme.WarrantyRoster.Button"
@@ -150,7 +154,7 @@
             android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginTop="@dimen/margin_35dp"
             android:text="@string/login_btn_login"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_other_methods"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pw" />
@@ -165,6 +169,100 @@
             app:layout_constraintEnd_toEndOf="@+id/btn_login"
             app:layout_constraintStart_toStartOf="@+id/btn_login"
             app:layout_constraintTop_toTopOf="@+id/btn_login" />
+
+        <View
+            android:id="@+id/divider_other_methods_start"
+            android:layout_width="@dimen/width_0dp"
+            android:layout_height="@dimen/height_1dp"
+            android:layout_marginHorizontal="@dimen/margin_16dp"
+            android:background="@color/grayMedium"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_other_methods"
+            app:layout_constraintEnd_toStartOf="@+id/tv_other_methods"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_other_methods"
+            app:layout_constraintVertical_bias="0.5" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_other_methods"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_18dp"
+            android:fontFamily="@font/localized_light"
+            android:maxLines="1"
+            android:text="@string/login_text_other_methods"
+            android:textAlignment="center"
+            android:textColor="@color/grayDark"
+            android:textSize="@dimen/text_size_12sp"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintBottom_toTopOf="@id/btn_google"
+            app:layout_constraintEnd_toStartOf="@+id/divider_other_methods_end"
+            app:layout_constraintStart_toEndOf="@+id/divider_other_methods_start"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+
+        <View
+            android:id="@+id/divider_other_methods_end"
+            android:layout_width="@dimen/width_0dp"
+            android:layout_height="@dimen/height_1dp"
+            android:layout_marginHorizontal="@dimen/margin_16dp"
+            android:background="@color/grayMedium"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_other_methods"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tv_other_methods"
+            app:layout_constraintTop_toTopOf="@+id/tv_other_methods"
+            app:layout_constraintVertical_bias="0.5" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_google"
+            style="@style/Theme.WarrantyRoster.Button.Outlined"
+            android:layout_width="@dimen/width_0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_24dp"
+            android:layout_marginTop="@dimen/margin_18dp"
+            app:icon="@drawable/ic_auth_google"
+            app:iconGravity="textStart"
+            app:iconPadding="@dimen/padding_0dp"
+            app:iconSize="@dimen/width_32dp"
+            app:iconTint="@color/whiteStatic"
+            app:iconTintMode="multiply"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_twitter"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_other_methods" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_twitter"
+            style="@style/Theme.WarrantyRoster.Button.Outlined"
+            android:layout_width="@dimen/width_0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
+            app:icon="@drawable/ic_auth_twitter"
+            app:iconGravity="textStart"
+            app:iconPadding="@dimen/padding_0dp"
+            app:iconSize="@dimen/width_32dp"
+            app:iconTint="@color/whiteStatic"
+            app:iconTintMode="multiply"
+            app:layout_constraintBaseline_toBaselineOf="@id/btn_google"
+            app:layout_constraintEnd_toStartOf="@id/btn_facebook"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@id/btn_google" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_facebook"
+            style="@style/Theme.WarrantyRoster.Button.Outlined"
+            android:layout_width="@dimen/width_0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_24dp"
+            app:icon="@drawable/ic_auth_facebook"
+            app:iconGravity="textStart"
+            app:iconPadding="@dimen/padding_0dp"
+            app:iconSize="@dimen/width_32dp"
+            app:iconTint="@color/whiteStatic"
+            app:iconTintMode="multiply"
+            app:layout_constraintBaseline_toBaselineOf="@id/btn_google"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/btn_twitter" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_register_title"
@@ -184,6 +282,7 @@
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <!-- MARGIN_BOTTOM: 19 + 5 = 24DP -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_register"
             style="@style/Theme.WarrantyRoster.TextButton"
