--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -211,6 +211,7 @@
             app:layout_constraintTop_toTopOf="@+id/tv_other_methods"
             app:layout_constraintVertical_bias="0.5" />
 
+        <!-- MARGIN_BOTTOM: 19 + 5 = 24DP -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_google"
             style="@style/Theme.WarrantyRoster.Button.Outlined"
@@ -218,13 +219,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_24dp"
             android:layout_marginTop="@dimen/margin_18dp"
+            android:layout_marginBottom="@dimen/margin_19dp"
             app:icon="@drawable/ic_auth_google"
             app:iconGravity="textStart"
             app:iconPadding="@dimen/padding_0dp"
             app:iconSize="@dimen/width_32dp"
             app:iconTint="@color/whiteStatic"
             app:iconTintMode="multiply"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btn_register"
             app:layout_constraintEnd_toStartOf="@+id/btn_twitter"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -288,7 +290,6 @@
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_71dp"
             android:layout_marginEnd="@dimen/margin_4dp"
             android:layout_marginBottom="@dimen/margin_19dp"
             android:gravity="center"
@@ -297,9 +298,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_register_title"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login"
-            app:layout_constraintVertical_bias="1"
-            app:layout_constraintVertical_chainStyle="spread" />
+            app:layout_constraintVertical_bias="1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
