--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -117,6 +117,12 @@
         <item name="trackCornerRadius">@dimen/radius_12dp</item>
     </style>
 
+    <style name="Theme.WarrantyRoster.LoadingProgressBar.OutlinedButton" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
+        <item name="android:indeterminate">true</item>
+        <item name="indicatorColor">@color/navyBlue</item>
+        <item name="trackCornerRadius">@dimen/radius_12dp</item>
+    </style>
+
     <style name="Theme.WarrantyRoster.LoadingProgressBar.Toolbar" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
         <item name="android:indeterminate">true</item>
         <item name="indicatorColor">@color/black</item>
