--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -38,6 +38,13 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_settingsFragment_to_linkedAccountsFragment"
+            app:destination="@id/linkedAccountsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
 
     <fragment
@@ -92,6 +99,12 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/warrantiesFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/linkedAccountsFragment"
+        android:name="com.xeniac.warrantyroster_manager.ui.fragments.LinkedAccountsFragment"
+        android:label="LinkedAccountsFragment"
+        tools:layout="@layout/fragment_linked_accounts" />
 
     <fragment
         android:id="@+id/changeEmailFragment"
