Linked Accounts Page UI Code

--- a/app/src/main/res/layout/fragment_linked_accounts.xml
+++ b/app/src/main/res/layout/fragment_linked_accounts.xml
@@ -164,7 +164,7 @@
                             android:textAllCaps="true"
                             android:textColor="@{googleStatusTextColor}"
                             android:textSize="@dimen/text_size_10sp"
-                            android:visibility="@{isGoogleLoading ? View.GONE : View.VISIBLE, default=visible}"
+                            android:visibility="@{isGoogleLoading ? View.GONE : View.VISIBLE, default=gone}"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
@@ -176,7 +176,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/margin_24dp"
-                            android:visibility="@{isGoogleLoading ? View.VISIBLE : View.GONE, default=gone}"
+                            android:visibility="@{isGoogleLoading ? View.VISIBLE : View.GONE, default=visible}"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -251,7 +251,7 @@
                             android:textAllCaps="true"
                             android:textColor="@{twitterStatusTextColor}"
                             android:textSize="@dimen/text_size_10sp"
-                            android:visibility="@{isTwitterLoading ? View.GONE : View.VISIBLE, default=visible}"
+                            android:visibility="@{isTwitterLoading ? View.GONE : View.VISIBLE, default=gone}"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
@@ -263,7 +263,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/margin_24dp"
-                            android:visibility="@{isTwitterLoading ? View.VISIBLE : View.GONE, default=gone}"
+                            android:visibility="@{isTwitterLoading ? View.VISIBLE : View.GONE, default=visible}"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -339,7 +339,7 @@
                             android:textAllCaps="true"
                             android:textColor="@{facebookStatusTextColor}"
                             android:textSize="@dimen/text_size_10sp"
-                            android:visibility="@{isFacebookLoading ? View.GONE : View.VISIBLE, default=visible}"
+                            android:visibility="@{isFacebookLoading ? View.GONE : View.VISIBLE, default=gone}"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
@@ -351,7 +351,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/margin_24dp"
-                            android:visibility="@{isFacebookLoading ? View.VISIBLE : View.GONE, default=gone}"
+                            android:visibility="@{isFacebookLoading ? View.VISIBLE : View.GONE, default=visible}"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
