--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,7 +43,7 @@
     </style>
 
     <style name="Theme.WarrantyRoster.Snackbar.ActionButton" parent="Widget.MaterialComponents.Button.TextButton.Snackbar">
-        <item name="android:textColor">@color/whiteStatic</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/localized_bold</item>
     </style>
 
